# platform.core.api.location-manager

./: AUTHORS  CMakeLists.txt  capi-location-manager.pc.in  project.config
TC/testcase/: Makefile  tslist  utc_location_gps_status.c  utc_location_location_manager.c  utc_location_location_manager_callback.c  utc_location_preference.c
debian/: changelog  control  rules
doc/: location-manager-doc.h
include/: location_batch.h  location_bounds.h  location_internal.h  location_preference.h  locations.h  locations_private.h
native-js/location/: manager.js
native-js/tmp/: location_manager.js  signature.h
packaging/: capi-location-manager.changes  capi-location-manager.spec
src/: location_batch.c  location_bounds.c  location_internal.c  location_preference.c  locations.c
test/: CMakeLists.txt  capi-location-manager-test.efl  capi-location-manager-test.manifest  capi-location-manager-test.xml  location_test.c
